# blackboard

./: .pytest.ini  pyproject.toml
mathlib/: pyproject.toml
mathlib/src/mathlib/: __init__.py  amicable_numbers.py  amicable_numbers_test.py  collatz.py  collatz_test.py  eratoshenes.py  eratoshenes_test.py  fibonacci_sequence.py  fibonacci_sequence_test.py  gcd.py  gcd_test.py  legendre_test.py  palindrome.py  palindrome_test.py  perfect_number.py  perfect_number_test.py  pythagorean_triples_test.py  quadratic_residue.py  quadratic_residue_test.py  sigma.py  sigma_test.py  square.py  square_test.py  tonelli_shanks.py  tonelli_shanks_test.py  triangular_numbers.py  triangular_numbers_test.py  zellers_algorithm.py  zellers_algorithm_test.py
mathlib/src/mathlib/data/: __init__.py
mathlib/src/mathlib/factorization/: fermat.py  fermat_test.py  naive.py  naive_test.py  qs.py  qs_test.py  vector.py  vector_test.py
mathlib/src/mathlib/primality/: miller_rabin.py  miller_rabin_test.py
project_euler/: p1.py  p10.py  p11.py  p12.py  p13.py  p14.py  p15.py  p16.py  p17.py  p18.py  p19.py  p2.py  p20.py  p21.py  p22.py  p23.py  p24.py  p3.py  p4.py  p5.py  p6.py  p7.py  p8.py  p9.py  pyproject.toml  regression_test.py  regression_test.yaml
project_euler/data/: __init__.py
project_euler/project_euler/solution_set/: solution_set.py  solution_set_test.py
project_euler/solution_set/: solution_set_test.py
